--- a/boctstyle/index.css
+++ b/boctstyle/index.css
@@ -83,9 +83,10 @@ footer > div > a:hover{
 
 .arrow_box {
 	position: relative;
-	background: #000000;
+	background-color: white;
 	border: 3px solid #ffffff;
   margin: 0 auto 40px;
+  padding: 6px;
   height: 420px;
   width: 60%;
   transition: all 1s ease-in-out;
@@ -110,7 +111,7 @@ footer > div > a:hover{
 
 .arrow_box:after {
 	border-color: rgba(0, 0, 0, 0);
-  border-bottom-color: #000000;
+  border-bottom-color: white;
 	border-width: 24px;
 	margin-left: -24px;
 }
@@ -121,7 +122,29 @@ footer > div > a:hover{
 	margin-left: -29px;
 }
 
-
+.inner-arrow_box{
+  width: 100%;
+  height: 90%;
+  border-radius: 36px;
+  background-color: black;
+  overflow-y: auto;
+}
+.texts{
+  margin: 5px 2%;
+  height: 20px;
+  float: left;
+  padding: 2px 4px;
+  width: 74%;
+  resize: none;
+}
+.subm{
+  margin: 5px;
+  width: 18%;
+  font-size: 18px;
+  outline: none;
+  border: none;
+  background-color: white;
+}
 
 
 
