--- a/boctstyle/index.css
+++ b/boctstyle/index.css
@@ -1,23 +1,31 @@
+@import url('https://fonts.googleapis.com/css?family=Megrim&display=swap');
+
 body, html{
   background-color: black;
-  margin: 0;
 }
+
 /*header*/
 .heading{
   border-bottom: 2px solid white;
   margin: 10px auto;
   width: 45%;
-  min-width: 290px;
+  min-width: 300px;
   padding: 5px 5px 10px;
 }
 /*title*/
 .heading h1{
   margin: 0;
   color: white;
-  font-family: monospace;
-  font-size: 36px;
+  font-family: 'Megrim', cursive;
   text-align: center;
   transition: all 0.4s ease-in-out;
+  user-select: none;
+  -ms-user-select: none;
+}
+@media screen and (max-width: 500px) {
+  .heading h1{
+    font-size: 26px;
+  }
 }
 
 
@@ -25,7 +33,8 @@ body, html{
 
 /*content-div-bot*/
 .bot-head{
-  width: 90px;
+  width: 20%;
+  min-width: 300px;
   height: 90px;
   margin: 10px auto 575px;
   padding: 5px;
@@ -65,16 +74,18 @@ body, html{
 	position: relative;
 	background-color: white;
 	border: 3px solid #ffffff;
+  border-radius: 36px;
   margin: 0 auto 52px;
   padding: 6px;
   height: 485px;
   width: 60%;
-  transition: all 1s ease-in-out;
+  transition: all 0.5s ease-in-out;
   display: none;
 }
 @media screen and (max-width: 880px) {
   .arrow_box{
     width: 94%;
+    min-width: 300px;
   }
 
 }
@@ -104,11 +115,65 @@ body, html{
 
 .inner-arrow_box{
   width: 100%;
-  height: 90%;
-  border-radius: 36px;
+  height: 423px;
+  border-radius: 32px;
   background-color: black;
   overflow-y: auto;
 }
+
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  margin: 12px auto;
+  width: 96%;
+  height: 38px;
+}
+
+.search {
+  width: 100%;
+  display: flex;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid black; /*#00B4CC;*/
+  border-right: none;
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: grey;
+  font-family: monospace;
+}
+
+.searchTerm:focus{
+  color: black;
+}
+
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid black;
+  background: black;
+  text-align: center;
+  color: white;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  outline: none;
+  font-size: 18px;
+  transition: all 0.1s linear;
+}
+.searchButton:active{
+  font-size: 16px;
+  color: #ff1439;
+}
+
+
+
+
+
+
+/*
 .texts{
   margin: 1% 2%;
   height: 6%;
@@ -133,6 +198,12 @@ body, html{
 .subm:active{
   color: crimson;
 }
+*/
+
+
+
+
+
 
 
 
@@ -141,7 +212,7 @@ footer{
   border-top: 2px solid white;
   padding: 20px 10px 0;
   height: 40px;
-  min-width: 290px;
+  min-width: 300px;
   margin: 0 auto 10px;
   text-align: center;
 }
@@ -174,48 +245,3 @@ footer > div > a:hover{
 }
 
 */
-
-
-
-
-.search {
-  width: 100%;
-  position: relative;
-  display: flex;
-}
-
-.searchTerm {
-  width: 100%;
-  border: 3px solid #00B4CC;
-  border-right: none;
-  padding: 5px;
-  height: 20px;
-  border-radius: 5px 0 0 5px;
-  outline: none;
-  color: #9DBFAF;
-}
-
-.searchTerm:focus{
-  color: #00B4CC;
-}
-
-.searchButton {
-  width: 40px;
-  height: 36px;
-  border: 1px solid #00B4CC;
-  background: #00B4CC;
-  text-align: center;
-  color: #fff;
-  border-radius: 0 5px 5px 0;
-  cursor: pointer;
-  font-size: 20px;
-}
-
-/*Resize the wrap to see the search bar change!*/
-.wrap{
-  width: 30%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
