--- a/boctstyle/index.css
+++ b/boctstyle/index.css
@@ -210,7 +210,8 @@ body, html{
 
 #chatspace::-webkit-scrollbar-track
 {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.8);
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.8);
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.8);
 	background-color: #F5F5F5;
 }
 
