--- a/boctstyle/index.css
+++ b/boctstyle/index.css
@@ -283,15 +283,15 @@ body, html{
 
 .typespace {
   width: 100%;
-  border: 3px solid black; /*#00B4CC;*/
-  border-right: none;
-  box-shadow: 0 0 15px black;
   padding: 5px;
   height: 20px;
+  border: 3px solid black; /*#00B4CC;*/
+  border-right: none;
   border-radius: 5px 0 0 5px;
+  box-shadow: 0 0 15px black;
   outline: none;
   color: hsl(0,0%,35%);
-  font-family: sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 
 .typespace:focus{
@@ -433,11 +433,11 @@ And also:
   width: 100%;
   height: 18px;
   background-color: white;
-  animation: load 2.5s;
+  animation: load 2.5s linear;
 }
 @keyframes load{
   0% {width: 0%;}
-  40% {width: 25%;}
+  35% {width: 21%;}
   65% {width: 70%;}
   100% {width: 100%;}
 }
