--- a/boctstyle/index.css
+++ b/boctstyle/index.css
@@ -441,3 +441,25 @@ And also:
   65% {width: 70%;}
   100% {width: 100%;}
 }
+
+
+/*
+.pop{
+ width: 360px;
+ height: 360px;
+ background-color: black;
+ border-radius: 24px;
+ position: absolute;
+ top: 30%;
+ left: 30%;
+ padding: 7px;
+ box-shadow: 0 0 60px white;
+}
+.pop-inner{
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  border: 4px solid #ff1439;
+  border-radius: 18px;
+  color: white;
+}
