--- a/boctstyle/index.css
+++ b/boctstyle/index.css
@@ -44,22 +44,8 @@ body, html{background-color: black;}
   text-align: center;
 }
 @keyframes flicker-in-1 {
-  0% {opacity: 0;}
-  10% {opacity: 0;} 10.1% {opacity: 1;} 10.2% {opacity: 0;}
-  20% {opacity: 0;} 20.1% {opacity: 1;} 20.6% {opacity: 0;}
-  30% {opacity: 0;} 30.1% {opacity: 1;} 30.5% {opacity: 1;} 30.6% {opacity: 0;}
-  45% {opacity: 0;} 45.1% {opacity: 1;}
-  50% {opacity: 1;}
-  55% {opacity: 1;} 55.1% {opacity: 0;}
-  57% {opacity: 0;} 57.1% {opacity: 1;}
-  60% {opacity: 1;} 60.1% {opacity: 0;}
-  65% {opacity: 0;} 65.1% {opacity: 1;}
-  75% {opacity: 1;} 75.1% {opacity: 0;}
-  77% {opacity: 0;} 77.1% {opacity: 1;}
-  85% {opacity: 1;} 85.1% {opacity: 0;}
-  86% {opacity: 0;} 86.1% {opacity: 1;} 86.2% {opacity: 0;} 86.3% {opacity: 1;}
-  99% {opacity: 1;} 99.1% {opacity: 0;} 99.2% {opacity: 1;}
-  100% {opacity: 1;}
+  0%, 10%, 10.2%, 20%, 20.6%, 30%, 30.6%, 45%, 55.1%, 57%, 60.1%, 65%, 75.1%, 77%, 85.1%, 86%, 86.2%, 99.1% {opacity: 0;}
+  10.1%, 20.1%, 30.1%, 30.5%, 45.1%, 50%, 55%, 57.1%, 60%, 65.1%, 75%, 77.1%, 85%, 86.1%, 86.3%, 99%, 99.2%, 100% {opacity: 1;}
 }
 
 /*BOcT*/
