--- a/boctstyle/index.css
+++ b/boctstyle/index.css
@@ -112,22 +112,17 @@ body, html{background-color: black;}
   scroll-behavior: smooth;
 }
 
-#chatspace::-webkit-scrollbar-track
-{
+#chatspace::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.8);
   box-shadow: inset 0 0 6px rgba(0,0,0,0.8);
 	background-color: #F5F5F5;
 }
-#chatspace::-webkit-scrollbar
-{
+#chatspace::-webkit-scrollbar {
 	width: 10px;
 	background-color: #F5F5F5;
   cursor: pointer;
 }
-#chatspace::-webkit-scrollbar-thumb
-{
-	background-color: #5c5c5c;
-}
+#chatspace::-webkit-scrollbar-thumb {background-color: #5c5c5c;}
 
 /*message CSS-------------------------------------------------------------------*/
 /* BOcT talk CSS */
